# omnTools

./: .gitignore  CMakeLists.txt  ProgressBar.cpp  README.md  bootstrap.cpp  build.bat  main.cpp  main.h.in  omnTools.rc
.github/workflows/: cmake-windows-platform.yml
header/: clist.h  extractor.h  install.h  lang.h  mas.h  stats.h  tip.h
lib/: mas.h
lib/IniParser/: IniParser.cpp  IniParser.h
lib/ProgressBar/: IniParser.cpp  ProgressBar.h
lib/install/: install.cpp  install.h
lib/lang/: lang.cpp  lang.h
lib/mas/: mas.cpp  mas.h
lib/model/: model.cpp  model.h
lib/tip/: tip.cpp  tip.h
src/: clist.cpp  extractor.cpp  install.cpp  lang.cpp  mas.cpp  stats.cpp  tip.cpp
src/Install/: install.cpp  mas.cpp
src/Utils/: statistics.cpp
